Fixes long text title overflow problem on grid mode.

--- a/src/assets/scss/_view-mode-grid.scss
+++ b/src/assets/scss/_view-mode-grid.scss
@@ -5,7 +5,8 @@
     .row { justify-content: space-around }
     .col { flex-grow: 0; }
 
-    .tainacan-grid {
+    .tainacan-grid-item {
+        max-width: 258px;
         margin: 12px 16px 24px 16px;
         text-align: center;
         display: block;
